# pam_oauth2_device

./: .gitignore  Cargo.toml  LICENSE  Makefile  README  README.md  config.json  example-config.json  setup_pam_azure.sh  test.c
conf/: device-flow-auth
rpm/: pam_oauth2_device.so-0.1.1-1.x86_64.rpm  pam_oauth2_device.so-0.2.0-1.x86_64.rpm
src/: config.rs  error_logger.rs  lib.rs  logger.rs  oauth_device.rs  prompt.rs  user.rs
tests/: device_code_tests.rs  error_logger.rs  introspect_tests.rs  test_logger.rs  token_tests.rs  utils.rs
