[package]
name = "pam_oauth2_device"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pam_oauth2_device"
crate-type = ["cdylib", "lib"]

[dependencies]
chrono = "0.4.39"
file-rotate = "0.7.6"
log = "0.4.22"
oauth2 = "4.4.2"
pam-bindings = "0.1.1"
qrcode = "0.14.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
simplelog = "0.12.2"
url = { version = "2.5.4", features = ["serde"] }

[dev-dependencies]
mockito = "1.6.1"

