[package]
name = "pam_oauth2_device"
version = "0.3.1-azure"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "PAM module that provides OAuth2.0 Device Authorization Grant with support for Microsoft Azure AD"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pam_oauth2_device"
crate-type = ["cdylib", "lib"]
[dependencies]
chrono = "0.4.40"
ctor = "0.4.1"
log = "0.4.27"
oauth2 = {version = "4.4.2", features = ["curl"]}
# Using own fork of pam-bindings because the original lib causes mem leaks and has bug in release mode.
# See https://crates.io/crates/pam-bindings for more info.
pam-bindings = { git = "https://github.com/Nithe14/pam-rs.git" }
qrcode = "0.14.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
simplelog = "0.12.2"
url = { version = "2.5.4", features = ["serde"] }
jsonwebtoken = { version = "9", features = ["use_pem"] }
reqwest = { version = "0.12.15", features = ["blocking", "json", "rustls-tls"] }
anyhow = "1.0.98"
base64 = "0.22.1"
users = "0.11.0"

[dev-dependencies]
mockito = "1.7.0"

[package.metadata.generate-rpm]
name = "pam_oauth2_device.so"
assets = [
    { source = "target/release/libpam_oauth2_device.so", dest = "/usr/lib64/security/pam_oauth2_device.so", mode = "755" },
    { source = "conf/device-flow-auth", dest="/etc/pam.d/device-flow-auth", mode = "644" },
    { source = "example-config.json", dest = "/etc/pam_oauth2_device/example-config.json", mode = "644" }
]

[package.metadata.generate-rpm.requires]
pam-devel = "*"
